trunk/Archive2/38/8e7e927c75b52d/output
main.cpp:1:2: error: ‘G’ does not name a type
  G A C E F B D 
  ^
